--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Hair by Claire</title>
 </head>
 <body>
-    <nav class="border">
-        <div class="logo" class="border">logo</div>
-        <ul>class="border"
+    <nav>
+        <div class="logo">logo</div>
+        <ul></ul>
             <li><a href="">Home</a></li>
             <li><a href="">About</a></li>
             <li><a href="">Gallery</a></li>
@@ -18,10 +18,59 @@
         </ul>
     </nav>
     <main>
-        <section class="border"></section>
-        <section class="border"></section>
-        <section class="border"></section>
-        <section class="border"></section>
+        <section>
+            <h3>MAKING HAIR AND SKIN DREAMS COME TRUE SINCE 2011</h3>
+            <h1>Clementine's</h1>
+        </section>
+        <section>
+            <div>
+                <h3>MISSION</h3>
+                <h2>Who we are</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt dolorem voluptas natus nemo enim cumque commodi fuga. Ea assumenda aperiam ipsam, quisquam aut sunt neque, id hic voluptatum dolore laboriosam.</p>
+            </div>
+            <div>
+                <h3>SCHEDULE APPOINTMENT</h3>
+                <button>BOOK NOW</button>
+            </div>
+        </section>
+        <section>
+            <h3>Color by Lizzie</h3>
+        </section>
+        <section>
+            <div>
+                <h2>Testimonials</h2>
+                <p>" Lorem ipsum dolor sit amet consectetur adipisicing elit. Est eius, delectus quia sit aperiam placeat et eum nam cumque architecto dignissimos, consequuntur quam, deserunt reprehenderit illo. Neque numquam quam quia?" <br> - JANE DOE</p>
+                <p>" Lorem ipsum dolor sit amet consectetur adipisicing elit. Est eius, delectus quia sit aperiam placeat et eum nam cumque architecto dignissimos, consequuntur quam, deserunt reprehenderit illo. Neque numquam quam quia?" <br> - JANE DOE</p>
+            </div>
+            <div>
+                <h3>OUR PROMISE</h3>
+                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam quas deleniti consequuntur assumenda reiciendis. Unde eveniet, eaque, quos cum quisquam dolorem possimus impedit corrupti mollitia repudiandae eius ab debitis nemo?</p>
+                <button>MEET OUR TEAM</button>
+            </div>
+        </section>
+        <section>
+            <button>LEARN MORE</button>
+            <h2>WHICH STYLIST IS BEST FOR YOU?</h2>
+            <h3>TAKE OUR QUIZ TO SEE WHICH STYLIST YOU MATCH WITH BEST</h3>
+        </section>
+        <section>
+            <h2>Schedule Appointment</h2>
+            <button>BOOK NOW</button>
+        </section>
     </main>
+    <footer>
+        <ul>
+            <li>LOCATIONS</li>
+            <li>FAQS</li>
+            <li>CAREERS</li>
+            <li><a href="./pages/contact.html">CONTACT US</a></li>
+        </ul>
+        <ul>
+            <a href="https://yelp.com/"><img src="./images/yelp.svg" alt="Yelp" title="Yelp"></a>
+            <a href="https://facebook.com/"><img src="./images/Facebook icon.svg" alt="Facebook" title="Facebook"></a>
+            <a href="https://instagram.com/"><img src="./images/Instagram icon.svg" alt="Instagram" title="Instagram"></a>
+            <a emailto:clairesheek@gmail.com><img src="./images/iconmonstr-email-2.svg" alt="Email" title="Email"></a>
+        </ul>
+    </footer>
 </body>
 </html>
