style matched fonts and buttons

--- a/index.html
+++ b/index.html
@@ -9,18 +9,22 @@
 <body>
     <nav>
         <div class="logo">logo</div>
-        <ul></ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Gallery</a></li>
-            <li><a href="">Blog</a></li>
-            <li><a href="">Contact</a></li>
+        <div>
+        <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./pages/about.html">About</a></li>
+            <li><a href="./pages/gallery.html">Gallery</a></li>
+            <li><a href="./pages/gallery.html">Blog</a></li>
+            <li><a href="./pages/contact.html">Contact</a></li>
         </ul>
+        </div>
     </nav>
     <main>
         <section>
-            <h3>MAKING HAIR AND SKIN DREAMS COME TRUE SINCE 2011</h3>
-            <h1>Clementine's</h1>
+            <div>
+                <h3 class="white">MAKING HAIR AND SKIN DREAMS COME TRUE SINCE 2011</h3>
+                <h1>Clementine's</h1>
+            </div>
         </section>
         <section>
             <div>
@@ -34,7 +38,7 @@
             </div>
         </section>
         <section>
-            <h3>Color by Lizzie</h3>
+            <h3 class="white">Color by Lizzie</h3>
         </section>
         <section>
             <div>
@@ -51,15 +55,15 @@
         <section>
             <button>LEARN MORE</button>
             <h2>WHICH STYLIST IS BEST FOR YOU?</h2>
-            <h3>TAKE OUR QUIZ TO SEE WHICH STYLIST YOU MATCH WITH BEST</h3>
+            <h3 class="white">TAKE OUR QUIZ TO SEE WHICH STYLIST YOU MATCH WITH BEST</h3>
         </section>
         <section>
-            <h2>Schedule Appointment</h2>
-            <button>BOOK NOW</button>
+                <h2 class="white">Schedule Appointment</h2>
+                <button>BOOK NOW</button>
         </section>
     </main>
     <footer>
-        <ul>
+        <ul> 
             <li>LOCATIONS</li>
             <li>FAQS</li>
             <li>CAREERS</li>
