Site is now mobile and tablet friendly. Added About page

--- a/index.html
+++ b/index.html
@@ -3,25 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/site-styles.css">
     <link rel="stylesheet" href="./styles.css">
     <title>Hair by Claire</title>
 </head>
 <body>
-    <nav>
+    <header>
         <div class="logo">logo</div>
-        <div>
-        <ul>
-            <li><a href="./index.html">Home</a></li>
-            <li><a href="./pages/about.html">About</a></li>
-            <li><a href="./pages/gallery.html">Gallery</a></li>
-            <li><a href="./pages/gallery.html">Blog</a></li>
-            <li><a href="./pages/contact.html">Contact</a></li>
-        </ul>
-        </div>
-    </nav>
+        <nav>
+            <a href="./index.html">HOME</a>
+            <a href="./pages/about.html">SERVICES</a>
+            <a href="./pages/gallery.html">OUR TEAM</a>
+            <a href="./pages/gallery.html">BLOG</a>
+            <a href="./pages/contact.html">CONTACT</a>
+        </nav>
+    </header>
     <main>
         <section>
-            <div>
+            <div class="welcome">
                 <h3 class="white">MAKING HAIR AND SKIN DREAMS COME TRUE SINCE 2011</h3>
                 <h1>Clementine's</h1>
             </div>
@@ -32,8 +31,9 @@
                 <h2>Who we are</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt dolorem voluptas natus nemo enim cumque commodi fuga. Ea assumenda aperiam ipsam, quisquam aut sunt neque, id hic voluptatum dolore laboriosam.</p>
             </div>
-            <div>
+            <div class="centered">
                 <h3>SCHEDULE APPOINTMENT</h3>
+                <button>MATCH WITH A<br>STYLIST</button> <br><br>
                 <button>BOOK NOW</button>
             </div>
         </section>
