--- a/pages/about.html
+++ b/pages/about.html
@@ -3,25 +3,80 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles/site-styles.css">
     <link rel="stylesheet" href="../styles/about-styles.css">
     <title>About</title>
 </head>
 <body>
-    <nav class="border">
-        <div class="logo" class="border">logo</div>
-        <ul>class="border"
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../pages/about.html">About</a></li>
-            <li><a href="../pages/gallery.html">Gallery</a></li>
-            <li><a href="../pages/blog.html">Blog</a></li>
-            <li><a href="../pages/contact.html">Contact</a></li>
-        </ul>
-    </nav>
+    <header>
+        <div class="logo">logo</div>
+        <nav>
+            <a href="../index.html">HOME</a>
+            <a href="./about.html">SERVICES</a>
+            <a href="./gallery.html">OUR TEAM</a>
+            <a href="./blog.html">BLOG</a>
+            <a href="./contact.html">CONTACT</a>
+        </nav>
+    </header>
     <main>
-        <section class="border"></section>
-        <section class="border"></section>
-        <section class="border"></section>
-        <section class="border"></section>
+        <section>
+            <div>
+                <h1>Hair Menu</h1>
+            </div>
+            <hr>
+            <article>
+                <div>
+                    <h2>Service #1</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo placeat odit quae fugit consequatur laboriosam, iste obcaecati veniam pariatur. Reiciendis consequuntur quisquam debitis tempore qui fugit accusamus perspiciatis incidunt officia?</p>
+                    <h2>Service #2</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo placeat odit quae fugit consequatur laboriosam, iste obcaecati veniam pariatur. Reiciendis consequuntur quisquam debitis tempore qui fugit accusamus perspiciatis incidunt officia?</p>
+                    <h2>Service #3</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo placeat odit quae fugit consequatur laboriosam, iste obcaecati veniam pariatur. Reiciendis consequuntur quisquam debitis tempore qui fugit accusamus perspiciatis incidunt officia?</p>
+                </div>
+                <div>
+                    <h2>Service #4</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo placeat odit quae fugit consequatur laboriosam, iste obcaecati veniam pariatur. Reiciendis consequuntur quisquam debitis tempore qui fugit accusamus perspiciatis incidunt officia?</p>
+                    <h2>Service #5</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo placeat odit quae fugit consequatur laboriosam, iste obcaecati veniam pariatur. Reiciendis consequuntur quisquam debitis tempore qui fugit accusamus perspiciatis incidunt officia?</p>
+                    <h2>Service #6</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo placeat odit quae fugit consequatur laboriosam, iste obcaecati veniam pariatur. Reiciendis consequuntur quisquam debitis tempore qui fugit accusamus perspiciatis incidunt officia?</p>
+                </div>
+            </article>
+        </section>
+        <aside>
+            <h2>Our Work</h2>
+            <div class="gallery">
+
+                    <img src="../images/gallery-elijah-o-donnell-ASDi5HBQqSI-unsplash.jpg">
+                    <img src="../images/gallery-elizabeth-lies-0vWbRK0-Vac-unsplash.jpg" alt="">
+                    <img src="../images/gallery-green-hair-4108463_1920.jpg" alt="">
+                    <img src="../images/gallery-hanen-souhail-OL9b_8q2m0k-unsplash.jpg" alt="">
+                    <img src="../images/gallery-jessica-dabrowski-W6cwaL7PMSw-unsplash.jpg" alt="">
+                    <img src="../images/gallery-jez-timms-nhORSvAaTlA-unsplash.jpg" alt="">
+                    <img src="../images/gallery-kareya-saleh-tLKOj6cNwe0-unsplash.jpg" alt="">
+                    <img src="../images/gallery-pexels-anna-shvets-4611961.jpg" alt="">
+                    <img src="../images/gallery-pexels-cottonbro-4123910.jpg" alt="">
+                    <img src="../images/gallery-pexels-luis-quintero-1510542.jpg" alt="">
+                    <img src="../images/gallery-toa-heftiba-ewpTmN9pQJM-unsplash.jpg" alt="">
+                    <img src="../images/gallerykari-shea-JRfCLkFje8I-unsplash.jpg" alt="">
+
+
+            </div>
+        </aside>
     </main>
+        <footer>
+        <ul> 
+            <li>LOCATIONS</li>
+            <li>FAQS</li>
+            <li>CAREERS</li>
+            <li><a href="./pages/contact.html">CONTACT US</a></li>
+        </ul>
+        <ul>
+            <a href="https://yelp.com/"><img src="../images/yelp.svg" alt="Yelp" title="Yelp"></a>
+            <a href="https://facebook.com/"><img src="../images/Facebook icon.svg" alt="Facebook" title="Facebook"></a>
+            <a href="https://instagram.com/"><img src="../images/Instagram icon.svg" alt="Instagram" title="Instagram"></a>
+            <a emailto:clairesheek@gmail.com><img src="../images/iconmonstr-email-2.svg" alt="Email" title="Email"></a>
+        </ul>
+    </footer>
 </body>
 </html>
