--- a/pages/blog.html
+++ b/pages/blog.html
@@ -3,25 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../styles/blog-styles.css">
+    <link rel="stylesheet" href="../styles/site-styles.css">
+    <link rel="stylesheet" href="../styles/gallery-styles.css">
     <title>Blog</title>
 </head>
 <body>
-    <nav class="border">
-        <div class="logo" class="border">logo</div>
-        <ul>class="border"
-            <li><a href="">Home</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Gallery</a></li>
-            <li><a href="">Blog</a></li>
-            <li><a href="">Contact</a></li>
-        </ul>
-    </nav>
+    <header>
+        <div class="logo">logo</div>
+        <nav>
+            <a href="../index.html">HOME</a>
+            <a href="./about.html">SERVICES</a>
+            <a href="./gallery.html">OUR TEAM</a>
+            <a href="./blog.html">BLOG</a>
+            <a href="./contact.html">CONTACT</a>
+        </nav>
+    </header>
     <main>
-        <section class="border"></section>
-        <section class="border"></section>
-        <section class="border"></section>
-        <section class="border"></section>
+        <section></section>
     </main>
 </body>
 </html>
