All pages finished except Contact - Hamburger Menu Attempt was almost successful

--- a/pages/about.html
+++ b/pages/about.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/site-styles.css">
     <link rel="stylesheet" href="../styles/about-styles.css">
-    <title>About</title>
+    <title>Services</title>
 </head>
 <body>
     <header>
@@ -64,7 +64,7 @@
             </div>
         </aside>
     </main>
-        <footer>
+    <footer>
         <ul> 
             <li>LOCATIONS</li>
             <li>FAQS</li>
@@ -72,10 +72,10 @@
             <li><a href="./pages/contact.html">CONTACT US</a></li>
         </ul>
         <ul>
-            <a href="https://yelp.com/"><img src="../images/yelp.svg" alt="Yelp" title="Yelp"></a>
-            <a href="https://facebook.com/"><img src="../images/Facebook icon.svg" alt="Facebook" title="Facebook"></a>
-            <a href="https://instagram.com/"><img src="../images/Instagram icon.svg" alt="Instagram" title="Instagram"></a>
-            <a emailto:clairesheek@gmail.com><img src="../images/iconmonstr-email-2.svg" alt="Email" title="Email"></a>
+            <a href="https://yelp.com/" target="_blank"><img src="../images/yelp.svg" alt="Yelp" title="Yelp"></a>
+            <a href="https://facebook.com/" target="_blank"><img src="../images/Facebook icon.svg" alt="Facebook" title="Facebook"></a>
+            <a href="https://instagram.com/" target="_blank"><img src="../images/Instagram icon.svg" alt="Instagram" title="Instagram"></a>
+            <a href="mailto:clairesheek@gmail.com"><img src="../images/iconmonstr-email-2.svg" alt="Email" title="Email"></a>
         </ul>
     </footer>
 </body>
