--- a/pages/contact.html
+++ b/pages/contact.html
@@ -19,7 +19,27 @@
         </nav>
     </header>
     <main>
-        <section></section>
+        <section>
+            
+        </section>
     </main>
+    <footer>
+        <div>
+            <h2 class="white">Schedule Appointment</h2>
+            <a class="button" href="https://booksy.com/" target="_blank">BOOK NOW</a></button>
+        </div>
+        <ul> 
+            <li>LOCATIONS</li>
+            <li>FAQS</li>
+            <li>CAREERS</li>
+            <li><a href="./pages/contact.html">CONTACT US</a></li>
+        </ul>
+        <ul>
+            <a href="https://yelp.com/" target="_blank"><img src="../images/yelp.svg" alt="Yelp" title="Yelp"></a>
+            <a href="https://facebook.com/" target="_blank"><img src="../images/Facebook icon.svg" alt="Facebook" title="Facebook"></a>
+            <a href="https://instagram.com/" target="_blank"><img src="../images/Instagram icon.svg" alt="Instagram" title="Instagram"></a>
+            <a href="mailto:clairesheek@gmail.com"><img src="../images/iconmonstr-email-2.svg" alt="Email" title="Email"></a>
+        </ul>
+    </footer>
 </body>
 </html>
