--- a/pages/gallery.html
+++ b/pages/gallery.html
@@ -19,7 +19,74 @@
         </nav>
     </header>
     <main>
-        <section></section>
+      <section class="title">
+        <div>
+          <h1>MEET OUR STYLISTS</h1>
+          <hr>
+        </div> 
+      </section>
+
+      <section class="gallery">
+        <div class="imageBox">
+          <img src="../images/headsot-alex-blajan-JL3702Xvk5c-unsplash.jpg" alt="" class="image">
+          <div class="overlay">
+            <div class="text"><h2>Stylist Name</h2><br><h3>BIO</h3> </div>
+          </div>
+        </div> 
+
+        <div class="imageBox small">
+          <img src="../images/headsot-binh-ly-k_4A59MzZTY-unsplash.jpg" alt="" class="image">
+          <div class="overlay">
+            <div class="text"><h2>Stylist Name</h2><br><h3>BIO</h3> </div>
+          </div>
+        </div>    
+
+        <div class="imageBox wide">
+          <img src="../images/headsot-clarisse-meyer-AC2CgfhkXNo-unsplash.jpg" alt="" class="image">
+          <div class="overlay">
+            <div class="text"><h2>Stylist Name</h2><br><h3>BIO</h3> </div>
+          </div>
+        </div> 
+    
+          <div class="imageBox medium">
+            <img src="../images/headsot-freddy-g-W8shIu9xBYo-unsplash.jpg" alt="" class="image">
+            <div class="overlay">
+              <div class="text"><h2>Stylist Name</h2><br><h3>BIO</h3> </div>
+            </div>
+          </div> 
+
+          <div class="imageBox medium">
+            <img src="../images/headsot-michael-dam-mEZ3PoFGs_k-unsplash.jpg" alt="" class="image">
+            <div class="overlay">
+              <div class="text"><h2>Stylist Name</h2><br><h3>BIO</h3> </div>
+            </div>
+          </div>  
+
+          <div class="imageBox wide">
+            <img src="../images/headsot-svyatoslav-romanov-BrEAp01_m5w-unsplash.jpg" alt="" class="image">
+            <div class="overlay">
+              <div class="text"><h2>Stylist Name</h2><br><h3>BIO</h3> </div>
+            </div>
+          </div>   
+      </section> 
     </main>
+    <footer>
+      <div>
+        <h2 class="white">Schedule Appointment</h2>
+        <a class="button" href="https://booksy.com/" target="_blank">BOOK NOW</a></button>
+      </div>
+      <ul> 
+          <li>LOCATIONS</li>
+          <li>FAQS</li>
+          <li>CAREERS</li>
+          <li><a href="./pages/contact.html">CONTACT US</a></li>
+      </ul>
+      <ul>
+        <a href="https://yelp.com/" target="_blank"><img src="../images/yelp.svg" alt="Yelp" title="Yelp"></a>
+        <a href="https://facebook.com/" target="_blank"><img src="../images/Facebook icon.svg" alt="Facebook" title="Facebook"></a>
+        <a href="https://instagram.com/" target="_blank"><img src="../images/Instagram icon.svg" alt="Instagram" title="Instagram"></a>
+        <a href="mailto:clairesheek@gmail.com"><img src="../images/iconmonstr-email-2.svg" alt="Email" title="Email"></a>
+    </ul>
+  </footer>
 </body>
 </html>
