--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
             </div>
             <div class="centered">
                 <h3>SCHEDULE APPOINTMENT</h3>
-                <button>MATCH WITH A<br>STYLIST</button> <br><br>
-                <button>BOOK NOW</button>
+                <a class="button" href="./pages/gallery.html">MATCH WITH<br>A STYLIST</a><br>
+                <a class="button" href="https://booksy.com/" target="_blank">BOOK NOW</a>
             </div>
         </section>
         <section>
@@ -49,20 +49,20 @@
             <div>
                 <h3>OUR PROMISE</h3>
                 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veniam quas deleniti consequuntur assumenda reiciendis. Unde eveniet, eaque, quos cum quisquam dolorem possimus impedit corrupti mollitia repudiandae eius ab debitis nemo?</p>
-                <button>MEET OUR TEAM</button>
+                <a class="button" href="./pages/gallery.html">MEET OUR TEAM</a>
             </div>
         </section>
         <section>
-            <button>LEARN MORE</button>
+            <a class="button" href="./pages/gallery.html">LEARN MORE</a>
             <h2>WHICH STYLIST IS BEST FOR YOU?</h2>
             <h3 class="white">TAKE OUR QUIZ TO SEE WHICH STYLIST YOU MATCH WITH BEST</h3>
         </section>
-        <section>
-                <h2 class="white">Schedule Appointment</h2>
-                <button>BOOK NOW</button>
-        </section>
     </main>
     <footer>
+        <div>
+            <h2 class="white">Schedule Appointment</h2>
+            <a class="button" href="https://booksy.com/" target="_blank">BOOK NOW</a></button>
+        </div>
         <ul> 
             <li>LOCATIONS</li>
             <li>FAQS</li>
