--- a/pages/blog.html
+++ b/pages/blog.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../styles/site-styles.css">
-    <link rel="stylesheet" href="../styles/gallery-styles.css">
+    <link rel="stylesheet" href="../styles/blog-styles.css">
     <title>Blog</title>
 </head>
 <body>
@@ -19,7 +19,55 @@
         </nav>
     </header>
     <main>
-        <section></section>
+        <section>
+            <div>
+                <h1>Our Blog</h1>
+            </div>
+            <hr>
+            <article>
+                <div class="imageBox"><img src="../images/blog-pexels-engin-akyurt-3065171.jpg" alt=""></div>
+                <div>
+                    <h2>Blog Title</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas, aut. Quo inventore officiis, deserunt sit exercitationem commodi error ducimus ab vitae omnis adipisci rem nemo. Corrupti voluptate soluta obcaecati tempore...</p>
+                    <a href="https://medium.com/">read more</a>
+                </div>
+            </article>
+            <article>
+                <div class="imageBox"><img src="../images/blog-guilherme-petri-PtOfbGkU3uI-unsplash.jpg" alt=""></div>
+                <div>
+                    <h2>Blog Title</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas, aut. Quo inventore officiis, deserunt sit exercitationem commodi error ducimus ab vitae omnis adipisci rem nemo. Corrupti voluptate soluta obcaecati tempore...</p>
+                    <a href="https://medium.com/">read more</a>
+                </div>
+            </article>
+            <article>
+                <div class="imageBox"><img src="../images/blog-staff-photo-adam-winger-KVVjmb3IIL8-unsplash.jpg" alt=""></div>
+                <div class="blogInfo">
+                    <h2>Blog Title</h2>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quas, aut. Quo inventore officiis, deserunt sit exercitationem commodi error ducimus ab vitae omnis adipisci rem nemo. Corrupti voluptate soluta obcaecati tempore...</p>
+                    <a href="https://medium.com/" target="_blank">read more</a>
+                </div>
+            </article>
+        
+        </section>
     </main>
+    <footer>
+        <div>
+            <h2 class="white">Schedule Appointment</h2>
+            <a class="button" href="https://booksy.com/" target="_blank">BOOK NOW</a></button>
+        </div>
+        <ul> 
+            <li>LOCATIONS</li>
+            <li>FAQS</li>
+            <li>CAREERS</li>
+            <li><a href="./pages/contact.html">CONTACT US</a></li>
+        </ul>
+        <ul>
+            <a href="https://yelp.com/" target="_blank"><img src="../images/yelp.svg" alt="Yelp" title="Yelp"></a>
+            <a href="https://facebook.com/" target="_blank"><img src="../images/Facebook icon.svg" alt="Facebook" title="Facebook"></a>
+            <a href="https://instagram.com/" target="_blank"><img src="../images/Instagram icon.svg" alt="Instagram" title="Instagram"></a>
+            <a href="mailto:clairesheek@gmail.com"><img src="../images/iconmonstr-email-2.svg" alt="Email" title="Email"></a>
+        </ul>
+    </footer>
 </body>
 </html>
